<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">DCSSDK</string>
    <string name="app_name_sdk">sdk</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audit_mode_warning_content">%1$s 该模式仅限内部人员测试使用，此功能可能会上报您的个人信息（包括但不限于IMEI）用于系统功能测试，请谨慎选择是否进入。</string>
    <string name="audit_mode_warning_title">注意</string>
    <string name="basemode_pic_textview_close">PIC OFF</string>
    <string name="basemode_pic_textview_open">PIC ON</string>
    <string name="basemode_textview_close">off</string>
    <string name="basemode_textview_open">on</string>
    <string name="beauty3d_add_hint">Add 3D Face Beauty</string>
    <string name="beauty3d_beauty_face">3D retouching</string>
    <string name="beauty3d_cancel">Cancel</string>
    <string name="beauty3d_cheekbones">Cheekbone</string>
    <string name="beauty3d_chin">Chin</string>
    <string name="beauty3d_continue_turn_to_left">Please continue turning your head left</string>
    <string name="beauty3d_continue_turn_to_right">Please continue turning your head right</string>
    <string name="beauty3d_customize_face">Custom retouching</string>
    <string name="beauty3d_customize_hint">Tap your facial features for minor adjustments</string>
    <string name="beauty3d_customize_success">Custom 3D retouched look created</string>
    <string name="beauty3d_delete">Delete</string>
    <string name="beauty3d_eye">Eye size</string>
    <string name="beauty3d_face_blurred">Blurred face image. Please don\'t sway your head when recording</string>
    <string name="beauty3d_face_change">Face has changed</string>
    <string name="beauty3d_face_closer">Please keep your face and the phone closer</string>
    <string name="beauty3d_face_edit_title">Facial Analysis</string>
    <string name="beauty3d_face_farther">Please keep your face and the phone farther</string>
    <string name="camera_ai_high_resolution_summary">Capture ultra clear portraits</string>
    <string name="camera_ai_high_resolution_title">AI ultra clear mode</string>
    <string name="camera_ai_scene_title">AI scene recognition</string>
    <string name="camera_beauty_makeup_watermark_setting_des">Apply a special watermark when photos are taken with a makeup effect.</string>
    <string name="camera_beauty_makeup_watermark_setting_title">Makeup</string>
    <string name="camera_codec_title">Photo/Video format</string>
    <string name="camera_countdown_effect_title">Light Effects for Selfie Timer</string>
    <string name="camera_dialog_app_info_positive">Agree and continue</string>
    <string name="camera_disagree_notice">Disagree</string>
    <string name="camera_face_rectify_summary">Remove edge distortion when taking portraits of people.</string>
    <string name="camera_face_rectify_title">Portrait distortion correction</string>
    <string name="camera_fingerprint_button_shutter_title">Capture with fingerprint sensor</string>
    <string name="camera_gesture_shutter_title">Show palm</string>
    <string name="camera_gesture_shutter_way_setting_summary">Show palm to front camera to take a selfie.</string>
    <string name="camera_heic_encode_10bits_summary_new">Take 10-bit photos in the \"Photo\" and \"Night\" modes using the rear camera. Photos will only be saved in the HEIF format and can only be displayed on a compatible device or app that supports 10-bit color.</string>
    <string name="camera_heic_encode_10bits_title">10-bit color</string>
    <string name="camera_heif_format_default_value">false</string>
    <string name="camera_heif_format_summary">To reduce file size while retaining image quality, capture photos in the high efficiency image format (HEIF). You can turn on \"Convert HEIF photos for sharing\" in \"Photos - Settings\" if the apps you are using to share photos do not support HEIF.</string>
    <string name="camera_heif_format_title">HEIF</string>
    <string name="camera_hevc_video_default_value">false</string>
    <string name="camera_hevc_video_setting_summary">Record videos in high-efficiency video coding format (HEVC) to save space. You may not be able to play HEVC videos in some apps or operating systems or share them on social media.</string>
    <string name="camera_hevc_video_title">High efficiency video</string>
    <string name="camera_interest_screen_snapshot_tip">Double press either volume button to launch the camera when the screen is off. (Not available during audio playback)</string>
    <string name="camera_location_setting_summary">Display location information in photo/video details.</string>
    <string name="camera_location_title">Location</string>
    <string name="camera_mirror_default_value">off</string>
    <string name="camera_mirror_setting_summary">Only when using the front camera</string>
    <string name="camera_qrcode_summary">Scan QR codes with the rear camera in Photo mode.</string>
    <string name="camera_qrcode_title">QR code scanning</string>
    <string name="camera_quick_launch_summary">Double press either volume button to launch the camera when the screen is off. (Not available during audio playback)</string>
    <string name="camera_save_selfie_mirror_title">Flip selfie</string>
    <string name="camera_self_mirror_setting_summary">Save selfies as they appear in the viewfinder.</string>
    <string name="camera_selfie_mirror_title">Flip selfie</string>
    <string name="camera_setting_about">About</string>
    <string name="camera_setting_auto_focus_summary">Tap to lock focus on a subject. Focus will automatically move with the subject.</string>
    <string name="camera_setting_auto_track_focus">Focus lock</string>
    <string name="camera_setting_camera_quick_launch_tittle">Quick launch gestures</string>
    <string name="camera_setting_common">General</string>
    <string name="camera_setting_default_value">off</string>
    <string name="camera_setting_dirty_lens_notice">Show dirty lens warning</string>
    <string name="camera_setting_gradienter">Level</string>
    <string name="camera_setting_gradienter_desc">Display visual aids to get straight and level photos or videos.</string>
    <string name="camera_setting_help_and_feedback">Help &amp; feedback</string>
    <string name="camera_setting_long_press_shutter">Touch and hold shutter button</string>
    <string name="camera_setting_long_process_shutter_default_value">fast_record_video</string>
    <string name="camera_setting_mode_on">On</string>
    <string name="camera_setting_name">Settings</string>
    <string name="camera_setting_photo_category">Photo</string>
    <string name="camera_setting_quick_launch_tittle">Quick launch</string>
    <string name="camera_setting_reference_line">Grid and guides</string>
    <string name="camera_setting_reference_line_photo">Photo</string>
    <string name="camera_setting_reference_line_video">Video</string>
    <string name="camera_setting_restore_default">Restore defaults</string>
    <string name="camera_setting_shooting_way">Shooting methods</string>
    <string name="camera_setting_shooting_way_summary">Tap to capture, Show palm</string>
    <string name="camera_setting_slogan_name_default">None</string>
    <string name="camera_setting_utility_function">Useful features</string>
    <string name="camera_setting_video">Video</string>
    <string name="camera_setting_water_mark">Watermark</string>
    <string name="camera_setting_watermark_custom_info_title">Custom text</string>
    <string name="camera_setting_watermark_display_info_title">Watermark information</string>
    <string name="camera_setting_watermark_font_size_title">Font size</string>
    <string name="camera_setting_watermark_info_option_date_and_time">Date and time</string>
    <string name="camera_setting_watermark_info_option_location">Location</string>
    <string name="camera_setting_watermark_medium_size_default">Medium</string>
    <string name="camera_setting_watermark_position_title">Position</string>
    <string name="camera_shutter_sound_title">Shutter sound</string>
    <string name="camera_slogan_default_value">off</string>
    <string name="camera_slogan_model_name">Device model</string>
    <string name="camera_storage_target_sdcard">Save to SD card</string>
    <string name="camera_storage_target_sdcard_prefer">Save to SD card</string>
    <string name="camera_sub_setting_open_source_license">Open source licenses</string>
    <string name="camera_tap_screen_shutter_summary">Tap anywhere in the viewfinder to take a photo.</string>
    <string name="camera_tap_shutter_summary">Tap on the frame to take a photo.</string>
    <string name="camera_tap_shutter_title">Tap to capture</string>
    <string name="camera_user_notice_title">Statement of use</string>
    <string name="camera_video_default_sound_effect">all_around</string>
    <string name="camera_video_dewind_noise_title">Reduce wind noise</string>
    <string name="camera_video_focusing_sound">Sound Focus</string>
    <string name="camera_video_focusing_sound_description">Sound recorded from your front will be amplified and the volume of the subject will be automatically adjusted as you zoom in or out.</string>
    <string name="camera_video_normal_sound">Standard</string>
    <string name="camera_video_panorama_sound">3D Recorder</string>
    <string name="camera_video_panorama_sound_description">Record stereo sound when taking videos in landscape mode.</string>
    <string name="camera_video_sound_title">Audio effects</string>
    <string name="camera_volume_button_function_title">Volume button action</string>
    <string name="camera_volume_key_function_default_value">shutter</string>
    <string name="privacy_policy_link">Privacy Notice</string>
    <string name="quick_share_and_edit">Quick share &amp; edit</string>
    <string name="quick_share_and_edit_summary">Swipe up on the thumbnail image in the lower-left corner to show sharing and editing options.</string>
    <string name="quick_share_and_edit_tips">Display shortcuts to share and edit the photo or video you just took.</string>
    <string name="quick_share_and_edit_title">Quick share &amp; edit</string>
</resources>