<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:camera="http://schemas.android.com/apk/res-auto"
    android:title="@string/camera_setting_name"
    android:key="camera_setting_menu_root_preference">
    <androidx.preference.Preference
        android:layout="@layout/color_preference_header"
        android:selectable="false"/>
    <com.oplus.camera.p172ui.menu.setting.StorageSaveToExternalPreference
        android:layout="@layout/camera_storage_save_to_external"
        android:selectable="false"
        android:key="pref_storage_save_to_external"/>
    <com.coui.appcompat.preference.COUIPreferenceCategory
        android:title="@string/camera_setting_common"
        android:key="pref_common_function"
        camera:isFirstCategory="true">
        <com.coui.appcompat.preference.COUIJumpPreference
            android:persistent="false"
            android:title="@string/camera_setting_water_mark"
            android:selectable="true"
            android:key="pref_watermark_setting_key"/>
        <com.coui.appcompat.preference.COUIListPreference
            android:persistent="true"
            android:entries="@array/camera_setting_reference_line_names"
            android:title="@string/camera_setting_reference_line"
            android:selectable="true"
            android:key="pref_camera_reference_line"
            android:defaultValue="@string/camera_setting_default_value"
            android:dialogTitle="@string/camera_setting_reference_line"
            android:entryValues="@array/camera_setting_reference_line_values"/>
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_setting_gradienter"
            android:key="pref_assist_gradienter"
            android:defaultValue="false"/>
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_fingerprint_button_shutter_title"
            android:key="pref_camera_fingerprint_shutter_key"
            android:defaultValue="false"/>
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_shutter_sound_title"
            android:key="pref_camera_sound_key"
            android:defaultValue="true"
            camera:switchTextOn="@string/camera_tap_shutter_summary"/>
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_save_selfie_mirror_title"
            android:key="pref_mirror_setting_key"
            android:summary="@string/camera_self_mirror_setting_summary"
            android:defaultValue="true"/>
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_location_title"
            android:key="pref_camera_recordlocation_key"
            android:summary="@string/camera_location_setting_summary"
            android:defaultValue="true"/>
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_storage_target_sdcard_prefer"
            android:key="pref_camera_storage_key"
            android:defaultValue="false"/>
    </com.coui.appcompat.preference.COUIPreferenceCategory>
    <com.coui.appcompat.preference.COUIPreferenceCategory
        android:title="@string/camera_setting_photo_category"
        android:key="pref_capture_function"
        camera:isFirstCategory="false">
        <com.coui.appcompat.preference.COUIJumpPreference
            android:persistent="false"
            android:title="@string/camera_setting_shooting_way"
            android:selectable="true"
            android:key="pref_shutter_help_key"
            android:summary="@string/camera_setting_shooting_way_summary"/>
        <com.coui.appcompat.preference.COUIListPreference
            android:persistent="true"
            android:entries="@array/setting_long_press_shutter_choice"
            android:title="@string/camera_setting_long_press_shutter"
            android:selectable="true"
            android:key="pref_long_process_choice_key"
            android:defaultValue="@string/camera_setting_long_process_shutter_default_value"
            android:dialogTitle="@string/camera_setting_long_press_shutter"
            android:entryValues="@array/setting_long_press_shutter_values"/>
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_face_rectify_title"
            android:key="pref_face_rectify_key"
            android:summary="@string/camera_face_rectify_summary"
            android:defaultValue="true"/>
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_ai_high_resolution_title"
            android:key="pref_super_clear_portrait"
            android:summary="@string/camera_ai_high_resolution_summary"
            android:defaultValue="false"/>
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_ai_scene_title"
            android:key="pref_ai_scene_key"
            android:defaultValue="true"/>
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_heic_encode_10bits_title"
            android:key="pref_10bits_heic_encode_key"
            android:summary="@string/camera_heic_encode_10bits_summary_new"
            android:defaultValue="false"/>
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_heif_format_title"
            android:key="pref_heif_format_key"
            android:summary="@string/camera_heif_format_summary"
            android:defaultValue="@string/camera_heif_format_default_value"/>
    </com.coui.appcompat.preference.COUIPreferenceCategory>
    <com.coui.appcompat.preference.COUIPreferenceCategory
        android:title="@string/camera_setting_video"
        android:key="pref_video_function"
        camera:isFirstCategory="false">
        <com.coui.appcompat.preference.COUIListPreference
            android:persistent="true"
            android:entries="@array/setting_video_sound_names"
            android:title="@string/camera_video_sound_title"
            android:key="pref_video_sound_effect_key"
            android:defaultValue="@string/camera_video_default_sound_effect"
            android:dialogTitle="@string/camera_video_sound_title"
            android:entryValues="@array/setting_video_sound_values"/>
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_setting_auto_track_focus"
            android:key="pref_track_focus_key"
            android:summary="@string/camera_setting_auto_focus_summary"
            android:defaultValue="true"/>
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_hevc_video_title"
            android:key="pref_hevc_video_key"
            android:summary="@string/camera_hevc_video_setting_summary"
            android:defaultValue="@string/camera_hevc_video_default_value"/>
    </com.coui.appcompat.preference.COUIPreferenceCategory>
    <com.coui.appcompat.preference.COUIPreferenceCategory
        android:title="@string/camera_setting_utility_function"
        android:key="pref_camera_utility_function"
        camera:isFirstCategory="false">
        <com.coui.appcompat.preference.COUIListPreference
            android:persistent="true"
            android:entries="@array/volume_key_function_names"
            android:title="@string/camera_volume_button_function_title"
            android:selectable="true"
            android:key="pref_volume_key_function_key"
            android:defaultValue="@string/camera_volume_key_function_default_value"
            android:dialogTitle="@string/camera_volume_button_function_title"
            android:entryValues="@array/volume_key_function_values"/>
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_setting_quick_launch_tittle"
            android:key="pref_camera_quick_launch_key"
            android:summary="@string/camera_quick_launch_summary"
            android:defaultValue="false"/>
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_countdown_effect_title"
            android:key="pref_camera_countdown_effect_key"
            android:defaultValue="true"/>
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_qrcode_title"
            android:key="pref_qr_code_key"
            android:summary="@string/camera_qrcode_summary"
            android:defaultValue="true"/>
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/quick_share_and_edit_title"
            android:key="pref_share_and_edit_key"
            android:summary="@string/quick_share_and_edit_summary"
            android:defaultValue="true"/>
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_setting_dirty_lens_notice"
            android:key="pref_lens_dirty_detection_key"
            android:defaultValue="true"/>
    </com.coui.appcompat.preference.COUIPreferenceCategory>
    <com.coui.appcompat.preference.COUIPreferenceCategory
        android:key="pref_restore_function"
        camera:isFirstCategory="false">
        <Preference
            android:persistent="false"
            android:title="@string/camera_setting_restore_default"
            android:selectable="true"
            android:key="pref_restore_key"/>
    </com.coui.appcompat.preference.COUIPreferenceCategory>
    <com.coui.appcompat.preference.COUIPreferenceCategory
        android:key="pref_help_and_feedback_function"
        camera:isFirstCategory="false">
        <com.coui.appcompat.preference.COUIJumpPreference
            android:persistent="false"
            android:title="@string/camera_setting_about"
            android:selectable="true"
            android:key="pref_about_key"/>
        <com.coui.appcompat.preference.COUIJumpPreference
            android:persistent="false"
            android:title="@string/camera_setting_help_and_feedback"
            android:selectable="true"
            android:key="pref_help_and_feedback_key"/>
        <Preference
            android:layout="@layout/color_preference_bottom_blank"
            android:selectable="false"
            android:key="pref_bottom_blank"/>
    </com.coui.appcompat.preference.COUIPreferenceCategory>
</androidx.preference.PreferenceScreen>
