<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:camera="http://schemas.android.com/apk/res-auto" android:key="camera_setting_advance_root_preference">
    <androidx.preference.Preference
        android:layout="@layout/color_preference_header"
        android:selectable="false"/>
    <com.coui.appcompat.preference.COUIPreferenceCategory
        android:title="@string/camera_setting_reference_line"
        android:key="pref_build_image_setting_function"
        camera:isFirstCategory="true">
        <com.coui.appcompat.preference.COUIListPreference
            android:persistent="true"
            android:entries="@array/camera_setting_line_photo_names"
            android:title="@string/camera_setting_reference_line_photo"
            android:selectable="true"
            android:key="pref_camera_line_photo"
            android:defaultValue="@string/camera_setting_default_value"
            android:dialogTitle="@string/camera_setting_reference_line_photo"
            android:entryValues="@array/camera_setting_line_photo_values"/>
        <com.coui.appcompat.preference.COUIListPreference
            android:persistent="true"
            android:entries="@array/pre_camera_line_video_names"
            android:title="@string/camera_setting_reference_line_video"
            android:selectable="true"
            android:key="pref_camera_line_video"
            android:defaultValue="@string/camera_setting_default_value"
            android:dialogTitle="@string/camera_setting_reference_line_video"
            android:entryValues="@array/pre_camera_line_video_values"/>
    </com.coui.appcompat.preference.COUIPreferenceCategory>
    <com.coui.appcompat.preference.COUIPreferenceCategory android:key="pref_gradienter_setting_function">
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_setting_gradienter"
            android:key="pref_assist_gradienter"
            android:summary="@string/camera_setting_gradienter_desc"
            android:defaultValue="false"/>
    </com.coui.appcompat.preference.COUIPreferenceCategory>
    <com.coui.appcompat.preference.COUIPreferenceCategory
        android:key="pref_shutter_setting_function"
        camera:isFirstCategory="true">
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_tap_shutter_title"
            android:key="pref_camera_tap_shutter_key"
            android:summary="@string/camera_tap_screen_shutter_summary"
            android:defaultValue="false"/>
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_gesture_shutter_title"
            android:key="pref_camera_gesture_shutter_key"
            android:summary="@string/camera_gesture_shutter_way_setting_summary"
            android:defaultValue="false"/>
    </com.coui.appcompat.preference.COUIPreferenceCategory>
    <com.coui.appcompat.preference.COUIPreferenceCategory
        android:key="pref_self_setting_function"
        camera:isFirstCategory="true">
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_selfie_mirror_title"
            android:key="pref_mirror_key"
            android:summary="@string/camera_mirror_setting_summary"
            android:defaultValue="@string/camera_mirror_default_value"/>
    </com.coui.appcompat.preference.COUIPreferenceCategory>
    <com.coui.appcompat.preference.COUIPreferenceCategory
        android:key="pref_lens_dirty_detection_function"
        camera:isFirstCategory="false">
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_setting_dirty_lens_notice"
            android:key="pref_lens_dirty_detection_key"
            android:defaultValue="true"/>
    </com.coui.appcompat.preference.COUIPreferenceCategory>
    <com.coui.appcompat.preference.COUIPreferenceCategory
        android:key="pref_other_setting_function"
        camera:isFirstCategory="false">
        <com.coui.appcompat.preference.COUIJumpPreference
            android:title="@string/camera_codec_title"
            android:key="pref_camera_code_key"/>
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_setting_camera_quick_launch_tittle"
            android:key="pref_camera_quick_launch_key"
            android:summary="@string/camera_interest_screen_snapshot_tip"
            android:defaultValue="false"/>
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/quick_share_and_edit"
            android:key="pref_share_and_edit_key"
            android:summary="@string/quick_share_and_edit_tips"
            android:defaultValue="true"/>
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_storage_target_sdcard"
            android:key="pref_camera_storage_key"
            android:defaultValue="false"/>
    </com.coui.appcompat.preference.COUIPreferenceCategory>
    <com.coui.appcompat.preference.COUIPreferenceCategory
        android:key="pref_watermark_visual_category"
        camera:isFirstCategory="true">
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_setting_water_mark"
            android:key="pref_watermark_function_key"
            android:defaultValue="@string/camera_slogan_default_value"/>
        <com.android.p093ui.menu.CameraWatermarkVisualPreference
            android:layout="@layout/camera_watermark_visual_layout"
            android:selectable="false"
            android:key="pref_watermark_preview_key"/>
        <com.coui.appcompat.preference.COUIPreferenceCategory
            android:key="pref_watermark_visual_content_category"
            camera:isFirstCategory="true">
            <com.coui.appcompat.preference.COUIPreference
                android:persistent="false"
                android:title="@string/camera_setting_watermark_custom_info_title"
                android:key="pref_watermark_author_key"
                android:iconSpaceReserved="false"
                camera:defaultValue="@string/camera_setting_slogan_name_default"/>
            <com.android.p093ui.menu.CameraSwitchPreference
                android:title="@string/camera_slogan_model_name"
                android:key="pref_watermark_phone"
                android:defaultValue="true"/>
            <com.android.p093ui.menu.CameraSwitchPreference
                android:title="@string/camera_setting_watermark_info_option_location"
                android:key="pref_watermark_location"
                android:defaultValue="false"/>
            <com.android.p093ui.menu.CameraSwitchPreference
                android:title="@string/camera_setting_watermark_info_option_date_and_time"
                android:key="pref_watermark_date_and_time"
                android:defaultValue="false"/>
            <com.coui.appcompat.preference.COUIMultiSelectListPreference
                android:entries="@array/camera_setting_watermark_display_info_option"
                android:title="@string/camera_setting_watermark_display_info_title"
                android:key="pref_watermark_display_info_key"
                android:entryValues="@array/camera_setting_watermark_display_info_values"
                camera:isPreferenceVisible="false"/>
        </com.coui.appcompat.preference.COUIPreferenceCategory>
        <com.coui.appcompat.preference.COUIPreferenceCategory
            android:key="pref_watermark_visual_config_category"
            camera:allowDividerBelow="true"
            camera:isFirstCategory="false">
            <com.coui.appcompat.preference.COUIListPreference
                android:entries="@array/camera_setting_watermark_size_names"
                android:title="@string/camera_setting_watermark_font_size_title"
                android:key="pref_watermark_size_key"
                android:dialogTitle="@string/camera_setting_watermark_font_size_title"
                android:entryValues="@array/camera_setting_watermark_size_values"
                camera:defaultValue="@string/camera_setting_watermark_medium_size_default"/>
            <com.coui.appcompat.preference.COUIListPreference
                android:entries="@array/camera_setting_watermark_position_names"
                android:title="@string/camera_setting_watermark_position_title"
                android:key="pref_watermark_position_key"
                android:dialogTitle="@string/camera_setting_watermark_position_title"
                android:entryValues="@array/camera_setting_watermark_position_values"/>
        </com.coui.appcompat.preference.COUIPreferenceCategory>
        <com.coui.appcompat.preference.COUIPreferenceCategory
            android:key="pref_watermark_visual_makeup_category"
            camera:isFirstCategory="false">
            <com.android.p093ui.menu.CameraSwitchPreference
                android:title="@string/camera_beauty_makeup_watermark_setting_title"
                android:key="pref_watermark_makeup_function_key"
                android:summary="@string/camera_beauty_makeup_watermark_setting_des"
                android:defaultValue="@string/camera_slogan_default_value"/>
            <com.android.p093ui.menu.CameraWatermarkVisualPreference
                android:layout="@layout/camera_watermark_makeup_visual_layout"
                android:selectable="false"
                android:key="pref_watermark_makeup_preview_key"/>
        </com.coui.appcompat.preference.COUIPreferenceCategory>
    </com.coui.appcompat.preference.COUIPreferenceCategory>
    <com.coui.appcompat.preference.COUIPreferenceCategory
        android:key="pref_video_sound_function"
        camera:isFirstCategory="true">
        <com.coui.appcompat.preference.COUIMarkPreference
            android:title="@string/camera_video_normal_sound"
            android:key="pref_video_sound_normal_key"
            camera:defaultValue="@string/camera_slogan_default_value"/>
        <com.coui.appcompat.preference.COUIMarkPreference
            android:title="@string/camera_video_panorama_sound"
            android:key="pref_video_sound_panorama_key"
            android:summary="@string/camera_video_panorama_sound_description"
            camera:defaultValue="@string/camera_setting_mode_on"/>
        <com.coui.appcompat.preference.COUIMarkPreference
            android:title="@string/camera_video_focusing_sound"
            android:key="pref_video_sound_focusing_key"
            android:summary="@string/camera_video_focusing_sound_description"
            camera:defaultValue="@string/camera_slogan_default_value"/>
    </com.coui.appcompat.preference.COUIPreferenceCategory>
    <com.coui.appcompat.preference.COUIPreferenceCategory android:key="pref_video_sound_noise_function">
        <com.android.p093ui.menu.CameraSwitchPreference
            android:title="@string/camera_video_dewind_noise_title"
            android:key="pref_video_noise_filter_key"
            android:defaultValue="true"/>
    </com.coui.appcompat.preference.COUIPreferenceCategory>
    <com.coui.appcompat.preference.COUIPreferenceCategory
        android:key="pref_about_setting_function"
        camera:isFirstCategory="true">
        <com.coui.appcompat.preference.COUIJumpPreference
            android:persistent="false"
            android:title="@string/privacy_policy_link"
            android:selectable="true"
            android:key="pref_about_setting_privacy_policy"/>
        <com.coui.appcompat.preference.COUIJumpPreference
            android:persistent="false"
            android:title="@string/camera_sub_setting_open_source_license"
            android:selectable="true"
            android:key="pref_about_setting_open_source_license"/>
    </com.coui.appcompat.preference.COUIPreferenceCategory>
    <Preference
        android:layout="@layout/color_preference_bottom_divider"
        android:selectable="false"
        android:key="pref_bottom_line"/>
    <Preference
        android:layout="@layout/color_preference_bottom_blank"
        android:selectable="false"
        android:key="pref_bottom_blank"/>
</androidx.preference.PreferenceScreen>
